# telegram_bot_deck_of_cards

./: .gitignore  Cargo.toml  Dockerfile  README.md  sqlx-data.json
config/: secrets.example
migrations/: 20230324142145_bots.sql  20230324142743_subscribers.sql  20230324143614_bots_subscribers.sql  20230324143847_chats_states.sql  20230324150158_cards.sql  20230327103107_create_bots.sql
pictures/: data.csv
pictures/en/: translation.yml
pictures/ru/: translation.yml
src/: database_interactions.rs  lib.rs  main.rs  process.rs  telegram_interactions.rs  translations.rs
